# ONNX-Runtime-Inference

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  CMakeLists_YOLOv5.txt  YOLOv5.cpp  face_inference.cpp  inference_origin.cpp
